--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ allprojects {
     }
 
     group = 'io.github.atistrcsn'
-    version = '0.1.0-SNAPSHOT'
+    version = '0.2.0'
 
     configurations.all {
         resolutionStrategy.cacheDynamicVersionsFor 0, 'hours'
